[gd_scene load_steps=2 format=3 uid="uid://7dmxfiismoas"]

[ext_resource type="Script" uid="uid://bvy6ifoxqaxiw" path="res://Scripts/UI/GameOverUI.gd" id="1_b1wmw"]

[node name="GameOverUI" type="PanelContainer" node_paths=PackedStringArray("try_again_button")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1wmw")
try_again_button = NodePath("MarginContainer/VBoxContainer/TryAgainContainer/TryAgainButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TryAgainContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TryAgainButton" type="Button" parent="MarginContainer/VBoxContainer/TryAgainContainer"]
layout_mode = 2
text = "Try again"

[node name="QuitContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/QuitContainer"]
layout_mode = 2
text = "Quit"
